--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <form method="post" class="container">
+    <form method="post">
         <h1><center>Volunteer Registration Form</center></h1>
        {% csrf_token %}
 
@@ -51,14 +51,15 @@
              <label>Residential Colony </label>
              {{ form.residential_colony  }}
          </div>
-         <div class="col-6">
-             <label>Residential Pincode </label>
-            {{ form.residential_pincode  }}
-         </div>
          </div>
         <br>
 
-
+        <div class="row">
+        <div class="col-6">
+             <label>Residential Pincode </label>
+            {{ form.residential_pincode  }}
+         </div>
+        </div>
 
         <div class="row">
          <div class="col-6">
@@ -80,12 +81,16 @@
         <br>
         <div class="row">
             <div class="col-6">
-             <label> Seva Area Residentail Colony </label>
+             <label> Seva Area Residential Colony </label>
              {{ form.seva_residential_colony  }}
          </div>
-            <div class="col-6">
-             <label> Seva Area Residential Pincode </label>
-            {{ form.seva_residential_pincode  }}
+            <br>
+         </div>
+        <br>
+        <div class="row">
+         <div class="col-6" style="width : 100%">
+             <label>Seva Residential Colony </label>
+             {{ form.seva_residential_pincode  }}
          </div>
          </div>
         <br>
@@ -103,7 +108,7 @@
             <div class="row">
             <div class="col-6">
              <label> Degree </label>
-             {{ form.university  }}
+             {{ form.degree  }}
          </div>
          <div class="col-6" style="width : 100%">
              <label> University/College </label>
