--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -2,146 +2,177 @@
 {% load crispy_forms_tags %}
 
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>Volunteer Registration</title>
-  </head>
-  <body>
+</head>
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    html,
+    body {
+        font-family: arial;
+        margin: 0;
+        padding: 0;
+    }
+
+    h1 {
+        color: #ff7e67;
+        font-size: 2.5rem;
+        height: 5rem;
+        background: transparent;
+        padding: 1rem;
+        margin: 1rem 1.5rem;
+        border-bottom: 3px solid #065c6f;
+        letter-spacing: 0.2rem;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
+    .base-form {
+        margin: 1rem 1.5rem;
+        border: 2px solid #ff7e67;
+        margin-bottom: 2rem;
+        background:#f4f4f4;
+        border-radius: 1.5rem;
+        padding: 1rem 0;
+
+    }
+    .table td, .table th{
+        padding-left: 3rem;
+    }
+    input,
+    select {
+        background: transparent;
+        border:none;
+        border-bottom: 1px solid black;
+        outline: none;
+    }
+    input:focus,
+    select:focus{
+        border-bottom: 2px solid #ff7e67;
+        box-shadow: 0px 4px 5px -4px #ff7e67;
+    }
+    .end-align{
+        margin-left: 10rem;
+        /* text-align: end; */
+    }
+    .heading{
+        background: transparent;
+        font-size: 2.5rem;
+        font-weight: 600;
+    }
+    .sub-button{
+        margin-top: 3rem;
+        background: #407885;
+        color: #f4f4f4;
+        font-size: 1.5rem;
+        font-weight: 600;
+        padding: 1rem;
+        border: none;
+        border-radius: 1rem;
+    }
+    .sub-button:hover{
+        background: slategray;
+    }
+</style>
+
+<body>
 
     <form method="post">
-        <h1><center>Volunteer Registration Form</center></h1>
-       {% csrf_token %}
+        <h1>
+            <center>Volunteer Registration Form</center>
+        </h1>
+        {% csrf_token %}
 
 
-        <div class="row">
-         <div class="col-6">
-             <label>Name </label>
-             {{ form.name }}
-         </div>
-         <div class="col-6">
-             <label>Year Of Birth </label>
-            {{ form.year_of_birth  }}
-         </div>
-         </div>
-        <br>
+        <div class="base-form">
+            <table class="table table-borderless">
 
-
-        <div class="row">
-         <div class="col-6" style="width : 100%">
-             <label>E-mail ID </label>
-             {{ form.email  }}
-         </div>
-         <div class="col-6">
-             <label>Contact Number </label>
-            {{ form.mobile_number  }}
-         </div>
-         </div>
-        <br>
-
-
-
-        <div class="row">
-         <div class="col-6" style="width : 100%">
-             <label>Residential Colony </label>
-             {{ form.residential_colony  }}
-         </div>
-         </div>
-        <br>
-
-        <div class="row">
-        <div class="col-6">
-             <label>Residential Pincode </label>
-            {{ form.residential_pincode  }}
-         </div>
+                <tbody>
+                    <tr>
+                        <td class="end-align">Name</td>
+                        <td>{{ form.name }}</td>
+                        <td class="end-align">Year of Birth</td>
+                        <td>{{ form.year_of_birth  }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Email ID</td>
+                        <td>{{ form.email }}</td>
+                        <td class="end-align">Contact Number</td>
+                        <td>{{ form.mobile_number }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Residential Colony</td>
+                        <td> {{ form.residential_colony  }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Residential Pincode</td>
+                        <td> {{ form.residential_pincode }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Employment Status</td>
+                        <td> {{ form.status  }}</td>
+                    </tr>
+                     
+                    <tr>
+                        <td class="end-align">Preferred Area Of Seva</td>
+                        <td> {{ form.seva_area  }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Seva Area Residential Colony</td>
+                        <td> {{ form.seva_residential_colony  }} </td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Seva Residential Colony</td>
+                        <td> {{ form.seva_residential_pincode  }}</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="heading" style="border-bottom: 3px solid #ff7e67; color: #065c6f;">Student Section</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Type of Degree</td>
+                        <td>{{ form.type }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Degree</td>
+                        <td>{{ form.degree  }}</td>
+                        <td class="end-align">University/College</td>
+                        <td>{{ form.university }}</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="heading" style="border-bottom: 3px solid #ff7e67; color: #065c6f;">Professional Section</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Highest Qualification</td>
+                        <td>{{ form.highest_qualification }}</td>
+                        <td class="end-align">Complition Year</td>
+                        <td>{{ form.complition_year }}</td>
+                    </tr>
+                    <tr>
+                        <td class="end-align">Employment Type</td>
+                        <td>{{ form.pstatus }}</td>
+                        <td class="end-align">Company/Nature of Business</td>
+                        <td>{{ form.nature }}</td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" style="text-align: center;" ><input class="sub-button" type="submit" value="Submit" class="danger"></td>
+                    </tr>
+                </tbody>
+                 
         </div>
 
-        <div class="row">
-         <div class="col-6">
-             <label> Employment Status </label>
-             {{ form.status  }}
-         </div>
-
-         </div>
-        <br>
-
-        <hr>
-
-        <div class="row">
-            <div class="col-6">
-             <label> Preferred Area Of Seva </label>
-            {{ form.seva_area  }}
-         </div>
-         </div>
-        <br>
-        <div class="row">
-            <div class="col-6">
-             <label> Seva Area Residential Colony </label>
-             {{ form.seva_residential_colony  }}
-         </div>
-            <br>
-         </div>
-        <br>
-        <div class="row">
-         <div class="col-6" style="width : 100%">
-             <label>Seva Residential Colony </label>
-             {{ form.seva_residential_pincode  }}
-         </div>
-         </div>
-        <br>
-        <hr>
-
-        <h3>Students Section</h3>
-        <div class="row">
-            <div class="col-6">
-             <label> Type of Degree </label>
-             {{ form.type  }}
-         </div>
-         </div>
-        <br>
-
-            <div class="row">
-            <div class="col-6">
-             <label> Degree </label>
-             {{ form.degree  }}
-         </div>
-         <div class="col-6" style="width : 100%">
-             <label> University/College </label>
-             {{ form.university  }}
-         </div>
-         </div>
-        <hr>
-        <br>
-
-        <h3>Professional Sections</h3>
-        <div class="row">
-         <div class="col-6">
-             <label>Highest Qualification</label>
-            {{ form.highest_qualification  }}
-         </div>
-         <div class="col-6" >
-             <label>Complition Year</label>
-             {{ form.complition_year  }}
-         </div>
-         </div>
-        <br>
-        <div class="row">
-            <div class="col-6">
-             <label>Employment Type</label>
-            {{ form.pstatus  }}
-         </div>
-         <div class="col-6" style="width : 100%">
-             <label>Company/Nature of Business</label>
-             {{ form.nature  }}
-         </div>
-         </div>
-        <br>
-        <input type="submit" value="Submit" class="danger">
+        
 
     </form>
 
@@ -149,8 +180,12 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -159,8 +194,6 @@
     -->
 
 
-  </body>
+</body>
+
 </html>
-
-
-
