--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -134,7 +134,7 @@
                         <td> {{ form.seva_residential_colony  }} </td>
                     </tr>
                     <tr>
-                        <td class="end-align">Seva Residential Colony</td>
+                        <td class="end-align">Seva Residential Pincode</td>
                         <td> {{ form.seva_residential_pincode  }}</td>
                     </tr>
                     <tr>
